--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>Potager-Logiciel-Educatif</title>
-  <style>
-  body {
-    margin: 0;
-  }
-
-  canvas {
-    width: 100%;
-    height: 100%
-  }
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
 <body>
@@ -28,10 +20,12 @@
   var cube = new THREE.Mesh(geometry, material);
   scene.add(cube);
   camera.position.z = 5;
-  var animate = function() { requestAnimationFrame(animate);
+  var animate = function() {
+    requestAnimationFrame(animate);
     cube.rotation.x += 0.1;
     cube.rotation.y += 0.1;
-    renderer.render(scene, camera); };
+    renderer.render(scene, camera);
+  };
   animate();
 
   </script>
