--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>hello phaser!</title>
-  <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/phaser-ce@2.10.3/build/phaser.min.js"></script>
 </head>
 
 <body>
