--- a/client/index.html
+++ b/client/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-
   <script src="js/PotaGen.js"></script>
-
   <script type="text/javascript">
   window.onload = function() {
 
@@ -31,7 +29,7 @@
 
     var model = new PotaGen(COLS, LIGS);
 
-    console.log(model.getContent(0,0));
+    console.log(model.getContent(0, 0));
 
     const HUD_COLS = Math.floor(TARGET_WIDTH / HUD_CELL_SIZE);
     const HUD_LIGS = Math.floor(HUD_COLS / ASPECT_RATIO);
@@ -58,7 +56,7 @@
 
     }
 
-    var game = new Phaser.Game(width, height, Phaser.CANVAS, '', { preload: preload, create: create });
+    var game = new Phaser.Game(width, height, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
 
     function preload() {
 
@@ -131,6 +129,41 @@
 
       }
 
+    }
+
+    function update() {
+
+      // Check key states every frame.
+      if (game.input.keyboard.isDown(Phaser.Keyboard.UP) || game.input.keyboard.isDown(Phaser.Keyboard.Z)) {
+
+        // ufo.x += speed;
+        // ufo.angle = 15;
+        // rightBtn.alpha = 0.6;
+        console.log("up");
+
+      } else if (game.input.keyboard.isDown(Phaser.Keyboard.LEFT) || game.input.keyboard.isDown(Phaser.Keyboard.Q)) {
+
+        console.log("left");
+
+        // ufo.x -= speed;
+        // ufo.angle = -15;
+        // leftBtn.alpha = 0.6;
+
+      } else if (game.input.keyboard.isDown(Phaser.Keyboard.RIGHT) || game.input.keyboard.isDown(Phaser.Keyboard.D)) {
+
+        // ufo.x += speed;
+        // ufo.angle = 15;
+        // rightBtn.alpha = 0.6;
+        console.log("right");
+
+      } else if (game.input.keyboard.isDown(Phaser.Keyboard.DOWN) || game.input.keyboard.isDown(Phaser.Keyboard.S)) {
+
+        // ufo.x += speed;
+        // ufo.angle = 15;
+        // rightBtn.alpha = 0.6;
+        console.log("down");
+
+      }
     }
 
   };
