--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
 
       game.canvas.oncontextmenu = function(e) { e.preventDefault(); }
 
-      game.load.image('ground_32x32', 'assets/tiles.png');
+      game.load.image('ground_32x32', 'assets/TileSet.png');
       game.load.image('tools_64x64', 'assets/farm_tool_icons_calciumtrice.png');
 
       game.load.spritesheet('pepper', 'assets/Pepper.png', 24, 32);
