--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
 
       game.canvas.oncontextmenu = function(e) { e.preventDefault(); }
 
-      game.load.image('ground_32x32', 'assets/TileSet.png');
+      game.load.spritesheet('ground_32x32', 'assets/TileSet.png', 32, 32);
       game.load.image('tools_64x64', 'assets/farm_tool_icons_calciumtrice.png');
 
       game.load.spritesheet('pepper', 'assets/Pepper.png', 24, 32);
@@ -89,6 +89,18 @@
     function create() {
 
       game.world.setBounds(-width / 2, -height / 2, width * 2, height * 2);
+
+
+      /**
+       *
+       *  A TileSprite is a Sprite that has a repeating texture.
+       *  The texture can be scrolled and scaled independently of the TileSprite itself.
+       *  Textures will automatically wrap and are designed so that you can create game
+       *  backdrops using seamless textures as a source.
+       *
+       **/
+      // Create a tilesprite (x, y, width, height, key)
+      game.add.tileSprite(-width / 2, -height / 2, width * 2, height * 2, 'ground_32x32', 12);
 
       //  Creates a blank tilemap
       map = game.add.tilemap();
