removed fps logging

--- a/client/index.html
+++ b/client/index.html
@@ -298,7 +298,7 @@
         carrot.animations.play('walk_' + carrotVelocity.direction, 10, true);
       }
 
-      console.log(1/elapsedSeconds);
+      // console.log(1/elapsedSeconds);
 
       carrot.x += carrotVelocity.x * elapsedSeconds;
       carrot.y += carrotVelocity.y * elapsedSeconds;
