--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
   "use strict";
 
   gameLoaded = function() {
-
+    potaKnow.nextKnowledge();
     let actTasks = ['gerer_potager'];
 
     potaKnow.register(function(task) {
