--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/Phasetips/Phasetips.js"></script>>
   <script src="js/PotaCommon.js"></script>
   <script src="js/PotaGen.js"></script>
   <script src="js/PotaTool.js"></script>
