--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <title>Potager</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser-ce@2.10.3/build/phaser.min.js"></script>
+  <style>
+    #game
+    {
+      cursor:none;
+    }
+  </style>
 </head>
 
 <body>
