--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,16 @@
   <title>Potager</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser-ce@2.10.3/build/phaser.min.js"></script>
   <style>
-    #game
-    {
-      cursor:none;
-    }
+
+  #game {
+    cursor: none;
+  }
+
+  @font-face {
+    font-family: "VASCON";
+    src: url("assets/fonts/AlphaFridgeMagnets.ttf");
+  }
+
   </style>
 </head>
 
