--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -16,13 +16,13 @@
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/async.min.js"></script>
-  <script type="text/javascript" src="js/Phasetips/Phasetips.js"></script>>
+  <script src="js/Phasetips/Phasetips.js"></script>
   <script src="js/PotaCommon.js"></script>
   <script src="js/PotaGen.js"></script>
   <script src="js/PotaTool.js"></script>
   <script src="js/PotaKnow.js"></script>
   <script src="js/game.js"></script>
-  <script type="text/javascript">
+  <script>
   "use strict";
 
   gameLoaded = function() {
