--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,11 @@
   <style>
   #game {
     cursor: none;
+    float: left;
+  }
+
+  #knowledge {
+    clear: left;
   }
 
   </style>
@@ -94,6 +99,10 @@
 
   </script>
   <div id="game"></div>
+  <p id="musicVolume">
+    musicVolume
+    <input type="range" min="0" max="100" step="10">
+  </p>
   <div id="knowledge"></div>
 </body>
 
