reset button added in the game

--- a/client/index.html
+++ b/client/index.html
@@ -100,7 +100,7 @@
   </script>
   <div id="game"></div>
   <p id="musicVolume">
-    musicVolume
+    musique volume
     <input type="range" min="0" max="100" step="10">
   </p>
   <div id="knowledge"></div>
